[gd_scene load_steps=12 format=3 uid="uid://btgqrhnjyyi3y"]

[ext_resource type="Script" uid="uid://sl3cd2fwcan5" path="res://GameController/game_controller.gd" id="1_tinjj"]
[ext_resource type="Script" uid="uid://ciyyv7opmx8yf" path="res://NetworkManager/network_manager.gd" id="2_bxeof"]
[ext_resource type="Script" uid="uid://pef8mjc35b8c" path="res://SaveManager/save_manager.gd" id="3_pvixq"]
[ext_resource type="Script" uid="uid://kkeueo3ocb65" path="res://Audio/audio_manager.gd" id="5_7l8mg"]
[ext_resource type="Script" uid="uid://bgkiqk7p4g2t5" path="res://Audio/sound_effect.gd" id="6_ir2ws"]
[ext_resource type="Script" uid="uid://pougj8dlol05" path="res://Audio/music_audio_stream_player.gd" id="6_u34ly"]
[ext_resource type="AudioStream" uid="uid://dg6kv5ldjvx03" path="res://Assets/Audio/Effects/Fantasy UI SFX/Fantasy UI SFX/Fantasy/Fantasy_UI (6).wav" id="7_ir2ws"]
[ext_resource type="AudioStream" uid="uid://c138omt8xuplp" path="res://Assets/Audio/Effects/Fantasy UI SFX/Fantasy UI SFX/Fantasy/Fantasy_UI (8).wav" id="8_l0eps"]

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_7l8mg"]

[sub_resource type="Resource" id="Resource_l0eps"]
script = ExtResource("6_ir2ws")
sound_effect = ExtResource("7_ir2ws")
metadata/_custom_type_script = "uid://bgkiqk7p4g2t5"

[sub_resource type="Resource" id="Resource_iy4tg"]
script = ExtResource("6_ir2ws")
type = 1
sound_effect = ExtResource("8_l0eps")
metadata/_custom_type_script = "uid://bgkiqk7p4g2t5"

[node name="GameController" type="Node"]
script = ExtResource("1_tinjj")

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource("2_bxeof")

[node name="SaveManager" type="Node" parent="."]
script = ExtResource("3_pvixq")

[node name="MusicAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamInteractive_7l8mg")
autoplay = true
script = ExtResource("6_u34ly")

[node name="AudioManager" type="Node2D" parent="."]
script = ExtResource("5_7l8mg")
sound_effects = Array[ExtResource("6_ir2ws")]([SubResource("Resource_l0eps"), SubResource("Resource_iy4tg")])
